--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,26 @@
-name = "cf-worker-ws-dev"
+name = "idtelkom-xl25k"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 # node_compat = true
 workers_dev = true
+[[routes]]
+pattern = "idgc.vpnyubi.us.kg"
+custom_domain = true
+[[routes]]
+pattern = "updates.netflix.com.idgc.vpnyubi.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.idgc.vpnyubi.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "support.udemy.com.idgc.vpnyubi.biz.id"
+custom_domain = true
+[[routes]]
+pattern = "zaintest.vuclip.com.idgc.vpnyubi.biz.id"
+custom_domain = true
 
 [vars]
-# PROXYIP = "211.230.110.231:50008"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea"
+PROXYIP = "36.95.152.58:12137"
+UUID = "6004d59a-8e09-4eeb-b9fd-7c5221ac7c55"
 # SOCKS5 = "127.0.0.1:1080"
 # SOCKS5_RELAY = "true"
