--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,7 +4,7 @@ compatibility_date = "2023-05-26"
 # node_compat = true
 workers_dev = true
 [[routes]]
-pattern = "idgc.vpnyubi.us.kg"
+pattern = "idgc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
 pattern = "updates.netflix.com.idgc.vpnyubi.biz.id"
