--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "sgovh"
+name = "sgcf"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 # node_compat = true
@@ -20,7 +20,7 @@ pattern = "zaintest.vuclip.com.sg.vpnyubi.biz.id"
 custom_domain = true
 
 [vars]
-PROXYIP = "51.79.158.58:2053"
+PROXYIP = "158.178.240.232:10258"
 UUID = "6004d59a-8e09-4eeb-b9fd-7c5221ac7c55"
 # SOCKS5 = "127.0.0.1:1080"
 # SOCKS5_RELAY = "true"
