--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,47 +1,47 @@
-name = "iddeneva"
+name = "idtencent"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 # node_compat = true
 workers_dev = true
 [[routes]]
-pattern = "idneva.vpnyubi.biz.id"
+pattern = "idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "updates.netflix.com.idneva.vpnyubi.biz.id"
+pattern = "updates.netflix.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.idneva.vpnyubi.biz.id"
+pattern = "quiz.vidio.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.idneva.vpnyubi.biz.id"
+pattern = "img.email1.vidio.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "www.udemy.com.idneva.vpnyubi.biz.id"
+pattern = "www.udemy.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "zaintest.vuclip.com.idneva.vpnyubi.biz.id"
+pattern = "zaintest.vuclip.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.idneva.vpnyubi.biz.id"
+pattern = "ava.game.naver.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "ir.huya.com.idneva.vpnyubi.biz.id"
+pattern = "ir.huya.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "investor.spotify.com.idneva.vpnyubi.biz.id"
+pattern = "investor.spotify.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "app.genflix.co.id.idneva.vpnyubi.biz.id"
+pattern = "app.genflix.co.id.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "ruangguru.com.com.idaneva.vpnyubi.biz.id"
+pattern = "ruangguru.com.idtc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "space.byu.id.idneva.vpnyubi.biz.id"
+pattern = "space.byu.id.idtc.vpnyubi.biz.id"
 custom_domain = true
 
 [vars]
-PROXYIP = "8.218.107.145:31166"
+PROXYIP = "43.133.145.156:53136"
 UUID = "6004d59a-8e09-4eeb-b9fd-7c5221ac7c55"
 # SOCKS5 = "127.0.0.1:1080"
 # SOCKS5_RELAY = "true"
