--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,47 +1,47 @@
-name = "idcayagan"
+name = "sgoracle"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 # node_compat = true
 workers_dev = true
 [[routes]]
-pattern = "idcg.vpnyubi.biz.id"
+pattern = "sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "updates.netflix.com.idcg.vpnyubi.biz.id"
+pattern = "updates.netflix.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.idcg.vpnyubi.biz.id"
+pattern = "quiz.vidio.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.idcg.vpnyubi.biz.id"
+pattern = "img.email1.vidio.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "www.udemy.com.idcg.vpnyubi.biz.id"
+pattern = "www.udemy.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "zaintest.vuclip.com.idcg.vpnyubi.biz.id"
+pattern = "zaintest.vuclip.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.idcg.vpnyubi.biz.id"
+pattern = "ava.game.naver.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "ir.huya.com.idcg.vpnyubi.biz.id"
+pattern = "ir.huya.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "investor.spotify.com.idcg.vpnyubi.biz.id"
+pattern = "investor.spotify.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "app.genflix.co.id.idcg.vpnyubi.biz.id"
+pattern = "app.genflix.co.id.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "ruangguru.com.idcg.vpnyubi.biz.id"
+pattern = "ruangguru.com.sgoc.vpnyubi.biz.id"
 custom_domain = true
 [[routes]]
-pattern = "space.byu.id.idcg.vpnyubi.biz.id"
+pattern = "space.byu.id.sgoc.vpnyubi.biz.id"
 custom_domain = true
 
 [vars]
-PROXYIP = "203.194.112.119:2053"
+PROXYIP = "213.35.107.73:443"
 UUID = "6004d59a-8e09-4eeb-b9fd-7c5221ac7c55"
 # SOCKS5 = "127.0.0.1:1080"
 # SOCKS5_RELAY = "true"
